--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -109,7 +109,7 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 
 
 
-\begin{figure}[htb]
+\begin{figure}[ht]
 \begin{center}
 \begin{subfigure}[b]{0.45\textwidth}
 	\centering
@@ -134,7 +134,7 @@ For this reason, the solution at $t=3$ is considered in the normalized $\ell_2$ 
 Based on Figure~\ref{fig:conv_plot_vortex_nohv}, which shows the convergence without the hyperviscosity filter on eigenvalues, we see that only one test case reflects the unstable eigenvalues present in the DM. In a stroke of luck the unstable modes are small enough that the solution at $t=3$ is not impacted, but as $t$ increases the instabilities begin to dominate. Figure~\ref{fig:conv_plot_vortex_hv} demonstrates the convergence of vortex roll-up with hyperviscosity included. The solution errors are slightly higher than Figure~\ref{fig:conv_plot_vortex_hv}, but the instabilities have vanished. 
 
 %TODO: copy data in: Users/evan/Laptop/efb06/research_2013/dsc_xpo_2013/figures/vortex/
-\begin{figure}
+\begin{figure}[ht]
 \begin{center}
 \begin{subfigure}[b]{0.49\textwidth}
 	\centering
@@ -158,7 +158,7 @@ Based on Figure~\ref{fig:conv_plot_vortex_nohv}, which shows the convergence wit
 \label{fig:vortex_t10}
 \end{center}
 \end{figure}
-\begin{figure}
+\begin{figure}[ht]
 \centering
 \begin{subfigure}[b]{0.48\textwidth}
 \centering
@@ -240,7 +240,7 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \end{center}
 \end{table}
 
-\begin{figure}
+\begin{figure}[ht]
 \begin{center}
 \begin{subfigure}[t]{0.45\textwidth}
 	\centering
