--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -166,11 +166,9 @@ With CPUs tending towards many cores, and the once special purpose, many-core GP
 \section{Sparse Matrix Libraries}
 
 One thing missing from the original release of CUDA was sparse matrix algebra support. 
-This led to investigations like \cite{Bell2009,SuKeutzer2012} and resulted in third party libraries like CUSP \cite{Cusp2012} and ViennaCL \cite{Rupp2010,Rupp2010a}, which are sparse matrix libraries developed for the GPU. The APIs of CUSP and ViennaCL are used like 
+This led to investigations like \cite{Bell2009,SuKeutzer2012} and resulted in third party libraries like CUSP \cite{Cusp2012} and ViennaCL \cite{Rupp2010,Rupp2010a}, which are sparse matrix libraries developed for the GPU. The CUSP and ViennaCL libraries are very similar in that they both provide sparse and dense matrix containers, vector containers, iterative Krylov solvers, preconditioners, etc. Both libraries offer similar sparse matrix containers including: Coordinate Matrix format (COO), Compressed-Row Storage format (CSR), ELLPACK Storage format (ELL), and a Hybrid Format (HYB) that is the combination of ELL and CSR. All of these formats were ported to the GPU in \cite{Bell2009} and have also been included in the CUDA SDK since then as part of the cuSPARSE library.  
 
-Algorithms from \cite{Bell2009} have since been included in the CUDA SDK as the cuSPARSE library. 
-
-Also, ViennaCL provides seamless interoperability with the Boost::UBLAS, EIGEN and MTL libraries via C++ templates. We test the performance of our algorithm on one or more CPUs with the Boost::UBLAS library. 
+ViennaCL provides seamless interoperability with the Boost::UBLAS, EIGEN and MTL libraries via C++ templates. We test the performance of our algorithm on one or more CPUs with the Boost::UBLAS library. 
 
 %TODO: get date
 NVidia eventually included a library named CUSPARSE as part of the CUDA SDK. Initial releases were 
@@ -197,9 +195,9 @@ Performance of SpMV on GPU will not be optimal. Often one finds in literature ex
 
 
 %TODO: ALL SPMV related work.
-\cite{Bell2009} 
+%\cite{Bell2009} 
 %TODO: \cite{Kreuzer2012} in distributed GPU. 
-\cite{Vuduc2005} etc. 
+%\cite{Vuduc2005} etc. 
 
 
 
@@ -325,18 +323,6 @@ Under OpenCL, the equivalent to CUDA local memory is called \textit{private memo
 
 \subsection{OpenCL vs CUDA}
 The market is volatile. Companies survive by investing margins in their next great product. If a product fails or the company faces a recall, their survival may come into question. Thus far, NVidia's CUDA has been wildly popular, but for the longest time (until May 2012) it was closed source. The closed source limited the language to NVidia hardware. As such, the OpenCL language gained popularity due to its support for AMD, Intel, mobile devices, web browsers, etc. NVidia's push to provide an open source compiler may be an attempt to regain the market share, but OpenCL appears to be on good footing. One other point: with an open source NVidia compiler, OpenCL can be optimized by the more mature NVidia compiler for their proprietary hardware. OpenCL compilers are also becoming more sophisticated at auto-optimization. 
-
-\subsection{Asynchronous Queuing} 
-Provide details and simple example of how asynchronous queueing can be used. 
-
-Need a figure showing the overlapping comm and comp in a general process with the wait points marked. 
-
-The two level parallelization can even be extended to three level parallelism
-with pThreads or OpenMP (see code samples attached to \cite{CudaToolkitDoc}). While OpenCL provides
-the means to target parallelism on either multi-core CPUs or many-core GPUs, it
-does not allow a parallel kernel on one hardware interact with a parallel kernel
-on the another. That is to say, an OpenCL kernel on the CPU cannot launch
-kernels on the GPU.  
 
 
 \subsection{Custom Kernels}
@@ -690,17 +676,19 @@ Figure~\ref{fig:gflops_cascade_intel_phi} is provided for comparison with Figure
 
 \section{Conclusions and Future Work}
 
-Conclude: sparse containers allow increased efficiency compared to our custom kernels. The custom kernels compete with CSR and COO. 
+This chapter presents the first implementation of RBF-FD to run on GPUs. Our OpenCL implementations apply RBF-FD differentiation matrices via Sparse Matrix-Vector multiplication (SpMV) to compute derivatives everywhere in the domain. The solution values are then updated via a fourth-order Runge Kutta (RK4) time-step. 
+
+Two custom GPU SpMV kernels were tested: one that performs the SpMV by dedicating one thread to compute each row of the differentiation matrix, and one that applies 32 threads (a warp) to compute each row. 
+
+The Roofline model (\cite{Williams2009}) was introduced to manage expectations for the peak possible performance (in terms of GFLOP/sec) that can be achieved for RBF-FD. Although GPUs advertise over 1 TFLOP/sec peak possible performance in double precision, the actual achieved FLOP/sec for the memory-bound RBF-FD application is significantly lower. The SpMV operational intensity of $\frac{1}{8}$ FLOPs:bytes, limits the expected performance to be less than 20 GFLOP/sec on NVidia M2070 hardware. Our custom OpenCL kernels achieve at most 3 GFLOP/sec on NVidia M2070 GPUs.
 
 
 
+Sparse containers allow increased efficiency compared to our custom kernels. 
+In an effort to boost performance, we integrated the ViennaCL library into our RBF-FD implementation and compared performance of three sparse containers provided by the library to determine the most appropriate sparse representation for RBF-FD. We compare the performance of the ViennaCL sparse containers (ELL, CSR, COO), and a CPU-only implementation of SpMV to the BOOST::uBLAS compressed-row storage. 
 
-We compare the performance of our custom kernel to ViennaCL kernels (ELL, CSR, COO), UBlas (CSR).
-
-
-ViennaCL allows control of the number of work-items for each kernel. 
-
-ViennaCL includes a set of auto-tuning options. %TODO: provide tuned parameters
+%ViennaCL allows control of the number of work-items for each kernel. 
+%ViennaCL includes a set of auto-tuning options. %TODO: provide tuned parameters
 
 %TODO: what is profile for each GPU type
 %TODO: What is the significance of tuning on our problem $n=17, 31, 50, 101,$ etc. 
