--- a/latex/multigpu_rbffd.tex
+++ b/latex/multigpu_rbffd.tex
@@ -33,6 +33,13 @@ When operating on multiple GPUs we avoid the copy-out or decode phase by requiri
 
 \section{Overlapping with the GPU}
 
+%The two level parallelization can even be extended to three level parallelism
+%with pThreads or OpenMP (see code samples attached to \cite{CudaToolkitDoc}). While OpenCL provides
+%the means to target parallelism on either multi-core CPUs or many-core GPUs, it
+%does not allow a parallel kernel on one hardware interact with a parallel kernel
+%on the another. That is to say, an OpenCL kernel on the CPU cannot launch
+%kernels on the GPU.  
+
 Overlapping communication and GPU computation is enabled by two levels of asynchronous commands: 
 \begin{itemize} 
 \item \emph{Non-blocking MPI}. The MPI\_Isend/MPI\_Irecv routines are used to post communication and immediately return the main thread to computation. 
