--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -40,8 +40,7 @@
 %\usepackage[section]{placeins}
 
 \input{macros/macros.tex}
-\input{macros/authnote_macros.tex}
-%\input{macros/track_changes_macros.tex}
+%\input{macros/authnote_macros.tex}
 \input{macros/misc_mac.tex}
 \input{macros/aliases.tex}
 \input{macros/table_macros.tex} 
