--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -300,7 +300,7 @@ When targeting the GPU, communication of solution or intermediate values is a mu
    \end{enumerate} 
 The data transfers involved in this process are illustrated at the bottom of Figure~\ref{fig:stencilSets2CPU}.
     Each GPU is only aware of the local indexing in Equation~\ref{eq:decompose_g}. Benefiting from the local structure, set 
-$\setProvide$ is copied off the GPU and into CPU memory as one contiguous memory block. The CPU is then responsible for an \emph{encode} process that maps local to global indices, copies elements of $\setProvide$ into an MPI buffer with one entry for each receiving CPU (i.e., data is grouped by destination). MPI distributes the encoded buffer and receives $\setDepend$ in a buffer that is sorted by origin. In general, Equation~\ref{eq:decompose_g} need not have $\setDepend$ structured the same as the receive buffer (i.e., data grouped by origin process). However, if the two do not match then received data must go through a \emph{decode} process to shuffle elements into the proper local ordering. The reordered data is then copied as a contiguous block of memory to the GPU. Decoding data is avoided with a simple assumption on the ordering of $\setDepend$. In \S~\ref{sec:cpu_scaling} bypassing the decode phase is one of several strategies employed for improved scalability. 
+$\setProvide$ is copied off from the GPU and into CPU memory as one contiguous memory block. The CPU is then responsible for an \emph{encode} process that maps local to global indices, copies elements of $\setProvide$ into an MPI buffer with one entry for each receiving CPU (i.e., the data is grouped by destination). MPI distributes the encoded buffer and receives $\setDepend$ in a buffer that is sorted by origin. In general, Equation~\ref{eq:decompose_g} does not require that $\setDepend$ be similarly structured to the receive buffer (i.e., data grouped by origin process). However, if the two do not match then received data must go through a \emph{decode} process to shuffle elements into the proper local ordering. The decoded data is then copied as a contiguous block of memory to the GPU. As one of a number of optimization strategies shown in \S~\ref{sec:cpu_scaling}, we avoid decoding data with the simple assumption on the ordering of $\setDepend$. %In \S~\ref{sec:cpu_scaling} bypassing the decode phase is one of several strategies employed for improved scalability. 
 
 \begin{figure}
 \begin{center}
@@ -312,14 +312,14 @@ $\setProvide$ is copied off the GPU and into CPU memory as one contiguous memory
 
 \subsection{Local Differentiation Matrix (DM) Structure}
 
-The local ordering of nodes leads to a unique DM on each MPI process. Consider Figure~\ref{fig:decomp_matrix_view} which shows the index sets for a single partition in context of a global RBF-FD differentiation matrix. Here the gray area is zero, and nonzeros exist between bowed lines. The partition is illustrated as the contiguous set of rows between dashed lines. Set membership for each row is determined based on how the off-diagonal nonzeros in a row match vertically with the center diagonal. When an MPI process constructs the local DM for the partition, the two sets of $\mathcal{B}$ in Figure~\ref{fig:decomp_matrix_view} are compressed into one contiguous set. %An example of this effect is demonstrated in Figure~\ref{fig:decomp_spy}. 
+The local ordering of nodes leads to a unique DM on each MPI process. Consider Figure~\ref{fig:decomp_matrix_view} which shows the index sets for a single partition within the context of a global RBF-FD differentiation matrix. Here the gray area is zero, and nonzeros exist only between bowed lines. The partition is illustrated as the contiguous set of rows between dashed lines. Set membership for each row is determined based on how the off-diagonal nonzeros in a row match vertically with the center diagonal, which is represented as a dashed-dot line. When an MPI process constructs the local DM for the partition, the two sets of $\mathcal{B}$ in Figure~\ref{fig:decomp_matrix_view} are compressed into one contiguous set. %An example of this effect is demonstrated in Figure~\ref{fig:decomp_spy}. 
 
 Figure~\ref{fig:decomp_spy} demonstrates the structure of a local DM on an MPI process. Labels denote the components of Equation~\ref{eq:decompose_g}. The local DM represents partition three of four from an original matrix with $N=4096$ rows and $n=31$ nonzeros per row. The RBF-FD stencils were generated on the $N=4096$ MD node set, and partitioned with METIS. 
 \begin{figure}
 \begin{center}
 \includegraphics[width=9cm]{rbffd_methods_content/decompositions/spy_metis_stencil_example_labels.png}
 %\includegraphics[width=0.45\textwidth]{rbffd_methods_content/decompositions/spy_metis_stencil_example_part_2_of_4.pdf}
-\caption{Spy of the local DM on processor 3 of 4 from a METIS partitioning of $N=4096$ nodes with stencil size $n=31$ and stencils generated with Algorithm~\ref{alg:fixed_grid_query} ($hnx=100$). Blocks are highlighted to distinguish node sets $\setCenters \backslash \setBoundary$, $\setBoundary$, and $\setDepend$. $\setDepend$ Stencils involved in MPI communications have been permuted to the bottom of the matrix. The split in $\setDepend$ indicates communication with two neighboring partitions. }
+\caption{Sparsity pattern (i.e., \tt{spy}) of the local DM on processor 3 of 4 from a METIS partitioning of $N=4096$ nodes with stencil size $n=31$ and stencils generated with Algorithm~\ref{alg:fixed_grid_query} ($hnx=100$). Blocks are highlighted to distinguish node sets $\setCenters \backslash \setBoundary$, $\setBoundary$, and $\setDepend$. $\setDepend$ Stencils involved in MPI communications have been permuted to the bottom of the matrix. The split in $\setDepend$ indicates communication with two neighboring partitions. }
 \label{fig:decomp_spy}
 \end{center}
 \end{figure}
